Fixed letterspacing issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ h3 {
   font-size: 11px;
   color: #707070;
   font-weight: normal;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 
 .keywords {
